fixed up more styling around flickering preview component

--- a/src/components/code-cell.css
+++ b/src/components/code-cell.css
@@ -1,3 +1,8 @@
+.progress-wrapper {
+  height: 100%;
+  flex-grow: 1;
+  background-color: white;
+}
 .progress-cover {
   height: 100%;
   flex-grow: 1;
